fix: update app name in build script from VTSApp to VTS

--- a/.github/workflows/build-and-distribute.yml
+++ b/.github/workflows/build-and-distribute.yml
@@ -502,7 +502,7 @@ jobs:
 
           auto_updates true
 
-          app "VTSApp.app"
+          app "VTS.app"
 
           zap trash: [
             "~/Library/Preferences/${BUNDLE_ID}.plist",
